[FIX] web: nowrap labels in groups + alignement
* Groups with the class o_label_nowrap now let their labels break when
in mobile mode (otherwise some groups would overflow)
* Correct alignement of checkboxes with their label in mobile mode

--- a/web/static/src/less/form_view.less
+++ b/web/static/src/less/form_view.less
@@ -254,10 +254,12 @@
     }
 
     // Groups
-    .o_group {
-        &.o_label_nowrap {
-            .o_form_label {
-                white-space: nowrap;
+    @media (min-width: @screen-md-min) {
+        .o_group {
+            &.o_label_nowrap {
+                .o_form_label {
+                    white-space: nowrap;
+                }
             }
         }
     }
