--- a/web/static/src/less/form_view_layout.less
+++ b/web/static/src/less/form_view_layout.less
@@ -324,7 +324,7 @@
         margin: 0;
 
         @media (max-width: @screen-xxs-max) {
-            margin-top: 5px;
+            margin-top: 3px;
 
             &.o_form_label_empty {
                 display: none;
